[tool.poetry]
name = "fastapi-jwt-authlib"
version = "0.5.0"
description = "A FastAPI JWT authentication library"
authors = ["kovalew.vladimir <kovalew.vladimir@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/kovalewvladimir/fastapi-jwt-authlib"
repository = "https://github.com/kovalewvladimir/fastapi-jwt-authlib"

[tool.poetry.dependencies]
python = "^3.12"

fastapi = "^0.114.1"
pyjwt = "^2.9.0"

[tool.poetry.group.dev.dependencies]
# Форматирование кода
black = "^24.4.2"

# Линтеры
mypy = "^1.11.1"
pylint = "^3.2.6"

# Для тестов
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pylint]
jobs = 4
max-line-length = 120
disable = ["C0114", "C0115", "C0116", "R0903"]
init-hook = 'import sys; sys.path.append("./app");'

[tool.mypy]
python_version = "3.12"
# disallow_untyped_defs = "True"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = "True"

[tool.pytest_env]
APP_ENVIRONMENT = "TESTING"